# pzh

./: .gitignore  404.html  CLAUDE.md  CNAME  README.md  gen-events.py  gen-tools.py  index.html  main.py  mkdocs.yml  pyproject.toml  run.sh  sitemap.xml
docs/: index.md
docs/events/: index.md
docs/graphs/: index.md
docs/puzzles/: 01e95f4c511112d6.md  112731cdfebc7b56.md  2c42db3cb12bedc9.md  3ba780ad22d1cc93.md  44328a5086f8912e.md  4af8b39ab6395702.md  5c38a0e212e10464.md  5c8df8a8c16b456c.md  66a8c9341dd63d93.md  6cc72709f09c6618.md  86ed0020634ebd6a.md  880f55a43ef0b1b1.md  95186a45ba2ead0c.md  9913307f7ca857de.md  a40753704cf84f3a.md  ab89cf03a59d1fc7.md  b1d4d19b1aa8306d.md  b284b3cd52ef677d.md  c174bd3d7465b4ea.md  c506b854f213ee82.md  ce39a1259d626754.md  d4b2f9d32a21d77c.md  d56d7de985b306b6.md  ed6753f10fa844d6.md  f08ac749f313d4c7.md  index.md
docs/tools/: index.md
events/: index.html
events/2016/: index.html
events/2017/: index.html
events/2018/: index.html
events/2019/: index.html
events/2020/: index.html
events/2021/: index.html
events/2022/: index.html
events/2023/: index.html
events/2024/: index.html
events/2025/: index.html
events/2026/: index.html
graphs/: index.html
js/: typing.js
overrides/: base.html  main.html
overrides/js/: typing.js
overrides/partials/: comments.html  copyright.html
puzzles/: index.html
puzzles/01e95f4c511112d6/: index.html
puzzles/112731cdfebc7b56/: index.html
resource/: events.yml  tools.yml
search/: search_index.json
src/: main.py  setup-id.py
tools/: index.html
(+581 files in other folders)
